# streflop

./: .editorconfig  .gitignore  ChangeLog  Makefile.common  Math.h  README.md  index.html  meson.build  meson_options.txt  test001.cpp
.github/workflows/: codeql-analysis.yml  codeql.yml  freebsd.yml  linux.yml  macos.yml  windows.yml
libm/: meson.build  w_expf.cpp
libm/dbl-64/: meson.build
libm/flt-32/: meson.build
libm/ldbl-96/: meson.build
scripts/: build-all.sh  sse_nodenormals_asan_setup.sh
tests/: md5sum-wrapper.sh  meson.build  randomTest.cpp
