# Build options
option('fpu', type : 'combo', choices : ['x87', 'sse', 'soft', 'all', 'none'], value : 'none', description: 'FPU')
option('denormals', type: 'boolean', value: false, description: 'denormals')
option('docdir', type : 'string', value : 'share/doc/streflop-ng',
       description : 'directory where the documentation should be installed to')
