
dbl64_sources = [
  'branred.cpp',
  'doasin.cpp',
  'dosincos.cpp',
  'e_acos.cpp',
  'e_acosh.cpp',
  'e_asin.cpp',
  'e_atan2.cpp',
  'e_atanh.cpp',
  'e_cosh.cpp',
  'e_exp2.cpp',
  'e_exp.cpp',
  'e_fmod.cpp',
  'e_gamma_r.cpp',
  'e_hypot.cpp',
  'e_j0.cpp',
  'e_j1.cpp',
  'e_jn.cpp',
  'e_lgamma_r.cpp',
  'e_log10.cpp',
  'e_log2.cpp',
  'e_log.cpp',
  'e_pow.cpp',
  'e_remainder.cpp',
  'e_rem_pio2.cpp',
  'e_sinh.cpp',
  'e_sqrt.cpp',
  'halfulp.cpp',
  'k_cos.cpp',
  'k_rem_pio2.cpp',
  'k_sin.cpp',
  'k_tan.cpp',
  'mpa.cpp',
  'mpatan2.cpp',
  'mpatan.cpp',
  'mpexp.cpp',
  'mplog.cpp',
  'mpsqrt.cpp',
  'mptan.cpp',
  's_asinh.cpp',
  's_atan.cpp',
  's_cbrt.cpp',
  's_ceil.cpp',
  's_copysign.cpp',
  's_cos.cpp',
  's_erf.cpp',
  's_expm1.cpp',
  's_fabs.cpp',
  's_finite.cpp',
  's_floor.cpp',
  's_fpclassify.cpp',
  's_frexp.cpp',
  's_ilogb.cpp',
  'sincos32.cpp',
  's_isinf.cpp',
  's_isnan.cpp',
  's_ldexp.cpp',
  's_llrint.cpp',
  's_llround.cpp',
  's_log1p.cpp',
  's_logb.cpp',
  'slowexp.cpp',
  'slowpow.cpp',
  's_lrint.cpp',
  's_lround.cpp',
  's_modf.cpp',
  's_nearbyint.cpp',
  's_nextafter.cpp',
  's_nexttoward.cpp',
  's_remquo.cpp',
  's_rint.cpp',
  's_round.cpp',
  's_scalbln.cpp',
  's_scalbn.cpp',
  's_signbit.cpp',
  's_sincos.cpp',
  's_sin.cpp',
  's_tan.cpp',
  's_tanh.cpp',
  's_trunc.cpp',
  'w_exp.cpp',
]

_dbl64_lib = []
foreach conf : streflop_configurations
  _dbl64_lib += static_library(
    'dbl64' + conf['suffix'],
    [dbl64_sources],
    cpp_args: [
      extra_flags,
      '-Wno-narrowing',
      '-DLIBM_COMPILING_DBL64=1',
      conf['flags'],
      conf['defs'],
    ],
    include_directories: [inc_dirs],
  )
endforeach
